test/correct/NoModuleHeader.hs
main :: String
main = "hello, world"
