test/typeerrors/Heuristics/TupleSize3.hs
module TupleSize3 where

main = fst (1,2,"hello","world") 
